# swannsong

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  Makefile.am  README.md  configure.ac  gameconf.txt  start.sh
data/: cutscenes.json  cutscenes.txt  gameconf.json  gameconf.txt
data/lang/: eng.txt  fra.txt
docs/: CMakeLists.txt  save_file_format.html  style.css  swannsongadv.6
game_data/: cutscenes.txt  gameconf.txt  rooms.txt
game_data/lang/: eng.txt  fra.txt
licenses/: ncurses.txt
src/: CutsceneClass.cpp  CutsceneClass.hpp  CutscenesContainer.cpp  CutscenesContainer.hpp  Game.cpp  Game.hpp  LocalConfVars.cpp  LocalConfVars.hpp  crypt_functions.cpp  crypt_functions.hpp  cutscenes.cpp  cutscenes.hpp  cutsecenes.cpp  cutsecenes.hpp  dialogbox.cpp  dialogbox.hpp  display_server.cpp  display_server.hpp  exitgame.c  exitgame.cpp  exitgame.h  fileio.cpp  files_path.cpp  files_path.hpp  game_data.cpp  game_data.hpp  game_error.cpp  game_error.hpp  game_lang.cpp  game_lang.hpp  game_menu.cpp  game_menu.hpp  game_state.hpp  gameconf.cpp  gameconf.hpp  init.c  init.cpp  init.h  init.hpp  inventory.c  (+35 more)
src/fileio/: conf_files.cpp  conf_files.hpp  fileio.c  fileio.cpp  fileio.h  fileio.hpp  gameconf.c  gameconf.cpp  gameconf.h  gameconf.hpp  parser.c  parser.h
src/fileio/save/: LoadedFile.cpp  LoadedFile.hpp  SaveChunk.cpp  SaveChunk.hpp  SaveFile.cpp  SaveFile.hpp  SaveFileBuffer.cpp  SaveFileBuffer.hpp  load_savefile.cpp  load_savefile.hpp  save_const.hpp  save_file.cpp  save_file.hpp
src/interpreter/: parser.c  parser.h  token.c  token.h
src/player/: Player.hpp  inventory.cpp  inventory.hpp
src/room/: Choice.cpp  Choice.hpp  RoomClass.cpp  RoomClass.hpp  RoomDisplay.hpp  RoomLoopState.cpp  RoomLoopState.hpp  RoomManager.cpp  RoomManager.hpp  RoomState.cpp  RoomState.hpp  find.c  find.cpp  find.h  find.hpp  room.c  room.cpp  room.h  room.hpp  room_io.cpp  room_io.h  room_parsing.cpp  room_parsing.hpp  room_struct.hpp  rooms.cpp  rooms.hpp
src/room/interpreter/: parser.cpp  parser.h  parser.hpp  token.c  token.cpp  token.h  token.hpp
src/tests/: tests.c  tests.cpp  tests.h  tests.hpp
src/textui/: pcurses.c  pcurses.h  textui.c  textui.h
src/vars/: LocalConfVariable.cpp  LocalConfVariable.hpp  gvars.c  gvars.cpp  gvars.h  gvars.hpp  intvar.c  intvar.cpp  intvar.h  intvar.hpp  pconst.c  pconst.h  pconst.hpp  pvars.c  pvars.cpp  pvars.h  pvars.hpp
tests/: tests.h
txt/: cutscenes.txt  rooms.txt
txt/lang/: en.txt  fr.txt
